:bug: fix too broad nowrap
see comment https://github.com/RaitaroH/Stylus-DeepDark/commit/9cd891c71218c98e43fec29187b2c6ecbcd3ecd7

--- a/StylusDeepDark.user.css
+++ b/StylusDeepDark.user.css
@@ -493,7 +493,6 @@
 
 	#header
 	{
-		white-space: nowrap !important;
 		width: 282px !important;
 	}
 	#header
@@ -511,6 +510,10 @@
 	#header summary h2:hover
 	{
 		color: var(--main-color) !important;
+	}
+	#linter-label
+	{
+		white-space: nowrap !important;
 	}
 
 	.resize-grip
